fix: #4174 Preview Jasper Report on Swing client.